k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abdm-wrapper
  namespace: abdm
  labels:
    app: abdm-wrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abdm-wrapper
  template:
    metadata:
      labels:
        app: abdm-wrapper
    spec:
      containers:
        - name: abdm-wrapper
          image: khushibaby/abdm:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 512m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: abdm-wrapper
  namespace: abdm
  labels:
    app: abdm-wrapper
spec:
  selector:
    app: abdm-wrapper
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  type: ClusterIP
