k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abdm-wrapper-router
  namespace: abdm
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:888798003375:certificate/b1e7c180-5d46-48f4-a73c-bb070d06681a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8082"
spec:
  ingressClassName: alb
  rules:
    - host: abdm-wrapper.aws.khushibaby.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abdm-wrapper
                port:
                  number: 8082
